[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/uipack/Buttons/blue_button01.png" type="Texture" id=1]
[ext_resource path="res://assets/uipack/Buttons/blue_button00.png" type="Texture" id=2]
[ext_resource path="res://assets/uipack/Font/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/uipack/Font/heading1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Menu/LoginScreen.gd" type="Script" id=5]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18921
margin_bottom = -1.18921
color = Color( 0.2, 0.211765, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginForm" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -162.0
margin_right = 95.0
margin_bottom = 162.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="LoginForm"]
margin_right = 190.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LoginForm"]
margin_top = 19.0
margin_right = 190.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 4 )
text = "Login"

[node name="MarginContainer3" type="MarginContainer" parent="LoginForm"]
margin_top = 55.0
margin_right = 190.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 20 )

[node name="LabelUsername" type="Label" parent="LoginForm"]
margin_top = 79.0
margin_right = 190.0
margin_bottom = 97.0
text = "Username"

[node name="Username" type="LineEdit" parent="LoginForm"]
margin_top = 101.0
margin_right = 190.0
margin_bottom = 129.0
text = "fritz"

[node name="MarginContainer2" type="MarginContainer" parent="LoginForm"]
margin_top = 133.0
margin_right = 190.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 10 )

[node name="LabelPassword" type="Label" parent="LoginForm"]
margin_top = 147.0
margin_right = 190.0
margin_bottom = 165.0
text = "Password"

[node name="Password" type="LineEdit" parent="LoginForm"]
margin_top = 169.0
margin_right = 190.0
margin_bottom = 197.0
text = "a"
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LoginForm"]
margin_top = 201.0
margin_right = 190.0
margin_bottom = 231.0
rect_min_size = Vector2( 0, 30 )

[node name="ButtonLogin" type="TextureButton" parent="LoginForm"]
margin_top = 235.0
margin_right = 190.0
margin_bottom = 284.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="LoginForm/ButtonLogin"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LoginForm"]
margin_top = 288.0
margin_right = 190.0
margin_bottom = 302.0

[node name="LinkButton" type="LinkButton" parent="LoginForm/CenterContainer"]
margin_left = 53.0
margin_right = 137.0
margin_bottom = 14.0
text = "new account"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -94.5
margin_right = 148.0
margin_bottom = 94.5
theme = ExtResource( 3 )
window_title = "Error"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LoginForm/ButtonLogin" to="." method="_on_ButtonLogin_pressed"]
[connection signal="pressed" from="LoginForm/CenterContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
